--- a/src/openhdwebui.client/src/app/status/status.component.html
+++ b/src/openhdwebui.client/src/app/status/status.component.html
@@ -167,10 +167,10 @@
               <div class="partition-name">
                 <span class="partition-swatch"
                       [style.backgroundColor]="partitionColor(part.device, disk)"></span>
-                <span class="partition-label">{{ part.device }}</span>
-              </div>
-              <div class="partition-meta">
-                <span class="partition-meta-label">{{ partitionDisplayName(part) }}</span>
+                <span class="partition-label">
+                  {{ partitionTypeLabel(part) }}
+                  <span class="partition-sub" *ngIf="partitionLabel(part)">{{ partitionLabel(part) }}</span>
+                </span>
               </div>
               <div class="partition-size">{{ formatBytes(part.sizeBytes) }}</div>
             </div>
