--- a/src/openhdwebui.client/src/app/status/status.component.html
+++ b/src/openhdwebui.client/src/app/status/status.component.html
@@ -17,37 +17,37 @@
                   class="mode-option"
                   *ngIf="runMode?.mode === 'air'"
                   (click)="setRunMode('ground')">
-            Set Ground
+            Ground
           </button>
           <button type="button"
                   class="mode-option"
                   *ngIf="runMode?.mode === 'air'"
                   (click)="setRunMode('record')">
-            Set Record
+            Record
           </button>
           <button type="button"
                   class="mode-option"
                   *ngIf="runMode?.mode === 'ground'"
                   (click)="setRunMode('air')">
-            Set Air
+            Air
           </button>
           <button type="button"
                   class="mode-option"
                   *ngIf="runMode?.mode === 'ground'"
                   (click)="setRunMode('record')">
-            Set Record
+            Record
           </button>
           <button type="button"
                   class="mode-option"
                   *ngIf="runMode?.mode === 'record'"
                   (click)="setRunMode('air')">
-            Set Air
+            Air
           </button>
           <button type="button"
                   class="mode-option"
                   *ngIf="runMode?.mode === 'record'"
                   (click)="setRunMode('ground')">
-            Set Ground
+            Ground
           </button>
         </div>
       </div>
